<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ShareTaxi</string>
    <string name="action_settings">Settings</string>
    <string name="app_api_key">AIzaSyDX6rqR6_hz9lzgt5wQmV3OqEPqFmIHIwg</string>

    <string name="number_of_Taxi">#</string>
    <string name="times_Line">לוח זמנים קו </string>
    <string name="stations_Line">רשימת תחנות קו </string>
    <string name="map_Line"> מסלול עדכני למונית מספר</string>
    <string name="scheduleLine_KAV4">לוח זמנים לקו 4:</string>
    <string name="schedule_KAV4">7 ימים בשבוע.\nתדירות: כל 4 דקות.</string>
    <string name="stationsLine">מסלול הקו:</string>
    <string name="stations_KAV4">יציאה מתחנה מרכזית חדשה, דרך תחנה ישנה, אלנבי, בן יהודה עד חניון רידינג.\nבחזרה על אותו מסלול עד לתחנה המרכזית החדשה.</string>
    <string name="map_stations">מפת מסלול:</string>
    
    <string name="scheduleLine_KAV4_A">לוח זמנים לקו 4 א:</string>
    <string name="schedule_KAV4_A">ימים א\' עד ה\', משעה שש וחצי בבוקר ועד חצות, ובשבת ממוצ\&quot;ש עד חצות.\nתדירות: בין 10 ל 15 דקות.</string>
    <string name="stations_KAV4_A">יציאה מתחנה מרכזית חדשה, דרך תחנה ישנה, אלנבי, בן יהודה, חניון רידינג, התערוכה, אבן גבירול, שי עגנון, לוי אשכול, אפטר, בורלא, האוזנר, איינשטיין, חיים לבנון, רקנאטי, אבא אחימאיר, בן יוסף, פרופס, קדושי השואה, אורי צבי גרינברג ובחזרה על אותו מסלול עד לתחנה המרכזית החדשה.</string>
    
    <string name="action_map">See Map</string>
    <string name="action_info">See Info</string>
    
    <string name="KAV5">קו 5</string>
    <string name="KAV4">קו 4</string>
    <string name="KAV4A">קו 4 א\'</string>
    
    
    <string name="scheduleLine_KAV5">לוח זמנים לקו 5:</string>
    <string name="schedule_KAV5">7 ימים בשבוע, משעה 6 בבוקר ועד 3 בלילה.\nתדירות: כל 5 דקות.</string>
    <string name="stations_KAV5">יציאה מהתחנה המרכזית החדשה, דרך התחנה המרכזית הישנה, אלנבי, רוטשילד, דיזנגוף , שדרות נורדאו, רחוב פנקס, רחוב ויצמן, בני דן, רחוב קוסובסקי, סנהדרין, הרצוג, בבלי, קוסובסקי, קאנטרי דקל.\nחזרה: קאנטרי דקל, קוסובסקי, שטיימן, הכנסת הגדולה, תוספתא, ירושלמי, בבלי, הרצוג, סנהדרין, בני דן, ויצמן, יהודה מכבי, אבן גבירול, נורדאו, דיזינגוף, שדרות תרס\&quot;ט, הבימה, שדרות רוטשילד, בצלאל יפה, יהודה הלוי, מקווה ישראל, מנחם בגין, השומרון, שדרות הר ציון, לוינסקי, תחנה מרכזית חדשה.  </string>
    
    
    
    <string name="share_Taxi">שתף נסיעה</string>
    <string name="taxi_distance_line">המונית הקרובה ביותר ממך </string>
    <string name="taxi_distance">##</string>
    <string name="descriptionShareTaxiImage">press to share you location</string>
    <string name="workDay_Line_textView">שעות פעילות בימים א ה </string>
    <string name="holiday_Line_textView">שעות פעילות בימי שישי וערבי חג </string>
    <string name="saturday_Line_textView">שעות פעילות בשבת וחג </string>
    <string name="StationList_textView">רשימת התחנות </string>
    <string name="title_activity_times">TimesActivity</string>
    <string name="title_activity_stations">StationsActivity</string>
    <string name="title_activity_results">Info</string>
    <string name="title_activity_map">MapActivity</string>
    <string name="show_lines">הצג קווים</string>
    <string name="show_line_kav4_north">קו 4 צפון</string>
    <string name="show_line_kav4_south">קו 4 דרום</string>
    <string name="show_line_kav4">קו 4</string>
    <string name="show_line_kav4a">קו 4א</string>
    <string name="show_line_kav4a_north">קו 4א צפון</string>
    <string name="show_line_kav4a_south">קו 4א דרום</string>
    <string name="show_line_kav5">קו 5</string>
    <string name="show_line_kav5_north">קו 5 צפון</string>
    <string name="show_line_kav5_south">קו 5 דרום</string>
    <string name="title_activity_settings">Settings</string>
    <string name="menu_action_about">About</string>
    
    
        <string name="about_devel">אודות המפתחים</string>
        <string name="devel_names_title">שמות מפתחי הפרויקט</string>
    <string name="share_app_title">שתף את האפליקציה</string>
    <string name="facebook_web_page_title">מצא אותנו ב facebook</string>
    <string name="send_SMS_to">לשלוח מסרון שיתוף ל</string>
    <string name="share">שתף</string>
    <string name="cancel_share">ביטול</string>
    <string name="bad_number">לא קיים מספר טלפון לאיש קשר זה, אנא נסה איש קשר אחר</string>
    <string name="share_msg">היי מה שלומך? אני רוצה לשתף איתך תוכנה מומלצת למעקב ותזמון קוי מוניות שירות מספר 4 5 באזור תא, הורד בחינם מהקישור הבא</string>
    <string name="thanks_for_share"> תודה על שיתוף האפליקציה</string>
    <string name="Url_for_download">https://www.dropbox.com/s/08l7xnk4a4v2wvp/about_shareTaxi.apk</string>
    <string name="devel_name1">פנדי הפנדה</string>
    <string name="devel_name2">ישראל הגדול</string>
    <string name="devel_name3">החתול במגפיים</string>
    <string name="devel_name4">משה אופניק</string>
    <string name="devel_name5">עוגי פלצת</string>
    <string name="devel_name6">יוסי בכינור</string>
    <string name="about_the_project">אודות הפרויקט איפה ולמה עשינו אותו ועוד קצת טקסט</string>
    <string name="thanks_for_email">אנו מודים לך אל האימייל נחזור אליך בהקדם האפשרי</string>
    <string name="contact_as_title">contact as</string>
    <string name="email_first_line">צוות sharetaxi שלום רב</string>
    <string name="email">sharetaxi@googlegroups.com</string>
    <string name="facebookWebPage">http://www.facebook.com</string>
    <string name="conect_as_title">Conect As</string>
    <string name="OK">OK</string>
    
    
    
    
    
</resources>
