<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:sharetaxi="http://schemas.android.com/apk/res-auto" >

    <!-- Search, should appear as action button -->

    <item 
        android:id="@+id/action_search"
        android:icon="@drawable/ic_action_search_img"
        android:title="@string/action_search"
        sharetaxi:showAsAction="always|collapseActionView"  
        sharetaxi:actionViewClass="android.support.v7.widget.SearchView"/>
    <item
        android:id="@+id/action_map"
        android:icon="@drawable/ic_action_location_found"
        android:title="@string/action_map"
        sharetaxi:showAsAction="ifRoom"/>
    <item
        android:id="@+id/action_info"
        android:icon="@drawable/ic_action_info"
        android:title="@string/action_info"
        sharetaxi:showAsAction="ifRoom"/>
    <!-- Settings, should always be in the overflow -->
    <item
        android:id="@+id/action_settings"
        android:title="@string/action_settings"
        sharetaxi:showAsAction="never"/>
    <item
        android:id="@+id/action_about"
        android:title="@string/menu_action_about"
        sharetaxi:showAsAction="never"/>
</menu>