<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="250dp"
    android:layout_height="500dp"
    android:layout_gravity="center"
    android:background="@color/egg_shell"
    android:gravity="center"
    android:stretchColumns="yes" >

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <Button
            android:id="@+id/send_App_Button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/share_app_title" />

        <Button
            android:id="@+id/facebookButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/facebook_web_page_title" />
    </LinearLayout>

    <TableRow
        android:id="@+id/tableRow_onAbout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:background="@color/egg_shell" >

        <ScrollView
            android:id="@+id/stockScrollView_onAbout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:padding="2dp" >

      
            <TableLayout
                android:id="@+id/TableScrollView_onAbout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="2dp"
                android:stretchColumns="yes" >

                <TableRow
                    android:id="@+id/tableRow0_onAbout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" >

                    <TextView
                        android:id="@+id/aboutTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:padding="5sp"
                        android:text="@string/about_devel"
                        android:textColor="@color/black"
                        android:textSize="@dimen/title_lineDialog"
                        android:textStyle="bold" />
                </TableRow>

                <TableRow
                    android:id="@+id/tableRow4_onAbout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent" >

                    <TextView
                        android:id="@+id/tableRow5_onAbout"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="right"
                        android:padding="1dp"
                        android:text="@string/about_the_project"
                        android:textColor="@color/black"
                        android:textSize="@dimen/textDialog" 
                        />
                </TableRow>

                <TableRow
                    android:id="@+id/tableRow0_onAbout2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" >

                    <TextView
                        android:id="@+id/developers_name_textView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:padding="7sp"
                        android:text="@string/devel_names_title"
                        android:textColor="@color/black"
                        android:textSize="@dimen/title_lineDialog"
                        android:textStyle="bold" />
                </TableRow>

                <TableRow
                    android:id="@+id/name_list1_TableRow"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" >

                    <TextView
                        android:id="@+id/name1_TextView"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="3000"
                        android:gravity="right"
                        android:padding="5dp"
                        android:text="@string/devel_name1"
                        android:textColor="@color/black"
                        android:textSize="@dimen/textDialog" />
                </TableRow>

                <TableRow
                    android:id="@+id/name_list2_TableRow"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" >

                    <TextView
                        android:id="@+id/name2_TextView"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="3000"
                        android:gravity="right"
                        android:padding="5dp"
                        android:text="@string/devel_name2"
                        android:textColor="@color/black"
                        android:textSize="@dimen/textDialog" />
                </TableRow>

                <TableRow
                    android:id="@+id/name_list3_TableRow"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" >

                    <TextView
                        android:id="@+id/name3_TextView"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="3000"
                        android:gravity="right"
                        android:padding="5dp"
                        android:text="@string/devel_name3"
                        android:textColor="@color/black"
                        android:textSize="@dimen/textDialog" />
                </TableRow>

                <TableRow
                    android:id="@+id/name_list4_TableRow"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" >

                    <TextView
                        android:id="@+id/name4_TextView"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="3000"
                        android:gravity="right"
                        android:padding="5dp"
                        android:text="@string/devel_name4"
                        android:textColor="@color/black"
                        android:textSize="@dimen/textDialog" />
                </TableRow>

                <TableRow
                    android:id="@+id/name_list5_TableRow"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" >

                    <TextView
                        android:id="@+id/name5_TextView"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="3000"
                        android:gravity="right"
                        android:padding="5dp"
                        android:text="@string/devel_name5"
                        android:textColor="@color/black"
                        android:textSize="@dimen/textDialog" />
                </TableRow>

                <TableRow
                    android:id="@+id/name_list6_TableRow"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" >

                    <TextView
                        android:id="@+id/name6_TextView"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="3000"
                        android:gravity="right"
                        android:padding="5dp"
                        android:text="@string/devel_name6"
                        android:textColor="@color/black"
                        android:textSize="@dimen/textDialog" />
                </TableRow>

                <TableRow
                    android:id="@+id/tableRow0_onAbout3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" >

                    <Button
                        android:id="@+id/contact_as_button"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/contact_as_title" />
                </TableRow>
            </TableLayout>
        </ScrollView>
    </TableRow>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <Button
            android:id="@+id/dialog_about_ok"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/OK" />
    </LinearLayout>

</TableLayout>